<resources>
    <string name="app_name">TurboCalc</string>
    <string name="button_ac">AC</string>
    <string name="button_divide">÷</string>
    <string name="button_multiply">×</string>
    <string name="button_percent">%</string>
    <string name="button_subtract">-</string>
    <string name="button_add">+</string>
    <string name="button_equal">=</string>
    <string name="button_dot">.</string>
    <string name="button_0">0</string>
    <string name="button_1">1</string>
    <string name="button_2">2</string>
    <string name="button_3">3</string>
    <string name="button_4">4</string>
    <string name="button_5">5</string>
    <string name="button_6">6</string>
    <string name="button_7">7</string>
    <string name="button_8">8</string>
    <string name="button_9">9</string>
    <string name="edit_text_desc">TurboCalc</string>
    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>
    <string name="appearance">Appearance</string>
    <string name="settings">Settings</string>
    <string name="length_conversions">Length Conversions</string>
    <string name="enter_value">Enter value</string>
    <string name="convert">Convert</string>
    <string name="weight_conversions">Weight Conversions</string>
    <string name="error_message">Please enter a valid number</string>
    <string name="nav_temperature_conversions">Temperature Conversions</string>
    <string name="nav_volume_conversions">Volume Conversions</string>
    <string name="area_conversions">Area Conversions</string>
    <string name="speed_conversions">Speed Conversions</string>
    <string name="time_conversions">Time Conversions</string>
    <string name="energy_conversions">Energy Conversions</string>
    <string name="pressure_conversions">Pressure Conversions</string>
    <string name="data_conversions">Data Conversions</string>
    <string-array name="volume_units">
        <item>Liter</item>
        <item>Milliliter</item>
        <item>Gallon</item>
        <item>Cup</item>
    </string-array>
    <string-array name="theme_options">
        <item>Light Mode</item>
        <item>Dark Mode</item>
    </string-array>
    <string-array name="length_units">
        <item>Kilometer</item>
        <item>Meter</item>
        <item>Centimeter</item>
        <item>Millimeter</item>
        <item>Mile</item>
        <item>Yard</item>
        <item>Foot</item>
        <item>Inch</item>
    </string-array>
    <string-array name="weight_units">
        <item>Kilogram</item>
        <item>Gram</item>
        <item>Milligram</item>
        <item>Pound</item>
        <item>Ounce</item>
    </string-array>
    <string-array name="temperature_units">
        <item>Celsius</item>
        <item>Fahrenheit</item>
        <item>Kelvin</item>
    </string-array>
</resources>
