<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/settings" />
    <item
        android:id="@+id/nav_length_conversions"
        android:icon="@drawable/ic_length_conversion"
        android:title="@string/length_conversions" />
    <item
        android:id="@+id/nav_weight_conversions"
        android:icon="@drawable/ic_weight_conversion"
        android:title="@string/weight_conversions" />
    <item
        android:id="@+id/nav_temperature_conversions"
        android:icon="@drawable/ic_temperature"
        android:title="@string/nav_temperature_conversions" />
    <item
        android:id="@+id/nav_volume_conversions"
        android:icon="@drawable/ic_menu_volume"
        android:title="@string/nav_volume_conversions" />
    <item
        android:id="@+id/nav_area_conversions"
        android:icon="@drawable/ic_area_conversion"
        android:title="@string/area_conversions" />
    <item
        android:id="@+id/nav_speed_conversions"
        android:icon="@drawable/ic_speed_conversion"
        android:title="@string/speed_conversions" />
    <item
        android:id="@+id/nav_time_conversions"
        android:icon="@drawable/ic_time_conversion"
        android:title="@string/time_conversions" />
    <item
        android:id="@+id/nav_energy_conversions"
        android:icon="@drawable/ic_energy_conversion"
        android:title="@string/energy_conversions" />
</menu>
